tests/snapshots/pnpm_8_nuxt.snap
---
source: crates/test_support/src/lib.rs
---
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `22.x`
  - Resolved Node.js version: `22.23.3`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.23.3/node-v22.23.3-<arch>.tar.gz ... (<time_elapsed>)
  - Validating ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.23.3 (<arch>)`
  - Installing Node.js `22.23.3 (<arch>)` ... (<time_elapsed>)
- Determining pnpm package information
  - Found `packageManager` set to `pnpm@8.11.0` in `package.json`
  - GET https://registry.npmjs.org/pnpm ... (<time_elapsed>)
  - Resolved pnpm version `8.11.0` to `8.11.0`
- Installing pnpm
  - GET https://registry.npmjs.org/pnpm/-/pnpm-8.11.0.tgz ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Successfully installed `pnpm@8.11.0`
- Setting up pnpm dependency store
  - Creating new pnpm content-addressable store
  - Creating pnpm virtual store
- Installing dependencies
  - Running `pnpm install --frozen-lockfile`

      Lockfile is up to date, resolution step is skipped
      Packages: +676
      ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
      <ESBUILD POSTINSTALL_SCRIPT>
      <ESBUILD POSTINSTALL_SCRIPT>
      <ESBUILD POSTINSTALL_SCRIPT>
      <ESBUILD POSTINSTALL_SCRIPT>

      devDependencies:
      + @nuxt/devtools 1.0.4
      + nuxt 3.8.2
      + vue 3.3.9
      + vue-router 4.2.5

      The dependency was already listed in devDependencies.
      If you want to make it a prod dependency, then move it manually.


      > pnpm-8-nuxt@ postinstall /workspace
      > nuxt prepare

      ✔ Types generated in .nuxt
      Done in <time_elapsed>

  - Done (<time_elapsed>)
- Pruning unused dependencies from pnpm content-addressable store
  - Running `pnpm store prune`

      Removed all cached metadata files
      Removed 12 files
      Removed 2 packages

  - Done (<time_elapsed>)
- Running scripts
  - Running `pnpm run build`


      > pnpm-8-nuxt@ build /workspace
      > nuxt build

      <NUXT BUILD OUTPUT>

  - Done (<time_elapsed>)
- Pruning dev dependencies

! Pruning skipped due to presence of lifecycle scripts
!
! The version of pnpm used (8.11.0) will execute the following lifecycle scripts declared in package.json during pruning which can cause build failures:
! - pnpm:devPreinstall
! - preinstall
! - install
! - postinstall
! - prepare
!
! Since pruning can't be done safely for your build, it will be skipped. To fix this you must upgrade your version of pnpm to 8.15.6 or higher.

- Removing non-deterministic build artifacts before export
  - Removed pnpm metadata file node_modules/.modules.yaml
- Done (finished in <time_elapsed>)
===> EXPORTING
Adding layer 'heroku/nodejs:available_parallelism'
Adding layer 'heroku/nodejs:dist'
Adding layer 'heroku/nodejs:pnpm'
Adding layer 'heroku/nodejs:virtual'
Adding layer 'heroku/nodejs:web_env'
Adding layer 'heroku/nodejs:z_node_module_bins'
Adding layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Adding layer 'buildpacksio/lifecycle:launcher'
Adding layer 'buildpacksio/lifecycle:config'
Adding layer 'buildpacksio/lifecycle:process-types'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
Setting default process type 'web'
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Adding cache layer 'heroku/nodejs:addressable'
Adding cache layer 'heroku/nodejs:dist'
Adding cache layer 'heroku/nodejs:pnpm'
Adding cache layer 'heroku/nodejs:pnpm_packument'
Successfully built image '<image-name>'
