tests/snapshots/pnpm_install_default.snap
---
source: crates/test_support/src/lib.rs
---
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `22.x`
  - Resolved Node.js version: `22.23.3`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.23.3/node-v22.23.3-<arch>.tar.gz ... (<time_elapsed>)
  - Validating ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.23.3 (<arch>)`
  - Installing Node.js `22.23.3 (<arch>)` ... (<time_elapsed>)
- Determining pnpm package information
  - Found pnpm lockfile, defaulting to `12.x`
  - GET https://registry.npmjs.org/pnpm ... (<time_elapsed>)
  - Resolved pnpm version `12.x` to `12.<minor>.<patch>`
- Installing pnpm
  - GET https://registry.npmjs.org/pnpm/-/pnpm-12.<minor>.<patch>.tgz ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - GET https://registry.npmjs.org/@pnpm/exe.<arch> ... (<time_elapsed>)
  - GET https://registry.npmjs.org/@pnpm/exe.<arch>/-/exe.<arch>-12.<minor>.<patch>.tgz ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Successfully installed `pnpm@12.<minor>.<patch>`
- Setting up pnpm dependency store
  - Creating new pnpm content-addressable store
  - Creating pnpm virtual store
- Installing dependencies
  - Running `pnpm install --frozen-lockfile`

      ? Verifying lockfile against supply-chain policies (<N> entries)...
      Packages are hard linked from the content-addressable store to the virtual store.
        Content-addressable store is at: /layers/heroku_nodejs/addressable/v11
        Virtual store is at:             ../layers/heroku_nodejs/virtual/store
      Packages: +2
      ++

      dependencies:
      + dotenv 16.4.5

      devDependencies:
      + environment 1.1.0

      Done in <time_elapsed> using pnpm v12.<minor>.<patch>

  - Done (<time_elapsed>)
- Pruning unused dependencies from pnpm content-addressable store
  - Running `pnpm store prune`

      Removed 0 files (0 bytes)
      Removed 0 packages

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Running `pnpm prune --prod --ignore-scripts`

      Packages: -1
      -

      devDependencies:
      - environment 1.1.0

      Done in <time_elapsed> using pnpm v12.<minor>.<patch>

  - Done (<time_elapsed>)
- Removing non-deterministic build artifacts before export
  - Removed pnpm metadata file node_modules/.modules.yaml
- Done (finished in <time_elapsed>)
===> EXPORTING
Adding layer 'heroku/nodejs:available_parallelism'
Adding layer 'heroku/nodejs:dist'
Adding layer 'heroku/nodejs:pnpm'
Adding layer 'heroku/nodejs:virtual'
Adding layer 'heroku/nodejs:web_env'
Adding layer 'heroku/nodejs:z_node_module_bins'
Adding layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Adding layer 'buildpacksio/lifecycle:launcher'
Adding layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Adding cache layer 'heroku/nodejs:addressable'
Adding cache layer 'heroku/nodejs:dist'
Adding cache layer 'heroku/nodejs:pnpm'
Adding cache layer 'heroku/nodejs:pnpm_exe_packument'
Adding cache layer 'heroku/nodejs:pnpm_packument'
Successfully built image '<image-name>'
